добавили шапку сайту

--- a/index.html
+++ b/index.html
@@ -7,6 +7,20 @@
   <title>Ремонт квартир</title>
 </head>
 <body>
+  <header class="header">
+    <div class="header-container">
+      <img src="img/header-logo.jpg" alt="Лого">
+      
+      <div class="header-text">
+        <div class="header-text__contacts">
+          <div class="header-text__contacts_geo">Калуга, Москва, МО</div>
+          <a class="header-text__contacts_tel" href="tel:+74954225131">+7 (495) 42-251-31</a>
+        </div>
+        <button class="button">Перезвоните мне</button>
+      </div>
+
+    </div>
+  </header>
   
 </body>
 </html>
