--- a/index.html
+++ b/index.html
@@ -1,26 +1,60 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/style.css">
   <title>Ремонт квартир</title>
 </head>
+
 <body>
   <header class="header">
-    <div class="header-container">
-      <img src="img/header-logo.jpg" alt="Лого">
-      
-      <div class="header-text">
-        <div class="header-text__contacts">
-          <div class="header-text__contacts_geo">Калуга, Москва, МО</div>
-          <a class="header-text__contacts_tel" href="tel:+74954225131">+7 (495) 42-251-31</a>
-        </div>
-        <button class="button">Перезвоните мне</button>
-      </div>
+    <div class="container">
+      <div class="header-container">
+        <img src="img/header-logo.jpg" alt="Лого">
 
+        <div class="header-text">
+          <div class="header-text__contacts">
+            <div class="header-text__contacts_geo">Калуга, Москва, МО</div>
+            <a class="header-text__contacts_tel" href="tel:+74954225131">+7 (495) 42-251-31</a>
+          </div>
+          <button class="button">Перезвоните мне</button>
+        </div>
+      </div>
     </div>
   </header>
-  
+
+  <div class="main">
+    <div class="container">
+      <div class="main-wrap">
+        <div class="main-text">
+          <h1 class="main-text__title">
+            Внутренняя отделка помещений "под ключ"
+            <span class="main-text__add">с гарантией качества, прописанной в договоре</span>
+          </h1>
+          <div class="main-advantages">
+            <div class="main-advantages__item">
+              <div class="main-advantages__img main-advantages__img-1"></div>
+              <div class="main-advantages__text">Точно соблюдаем сроки</div>
+            </div>
+            <div class="main-advantages__item">
+              <div class="main-advantages__img main-advantages__img-2"></div>
+              <div class="main-advantages__text">Рассчитаем смету на работы<br>и материалы в день обращения</div>
+            </div>
+            <div class="main-advantages__item">
+              <div class="main-advantages__img main-advantages__img-3"></div>
+              <div class="main-advantages__text">Предложим более 100 вариантов исполнения дизайна Вашего жилья</div>
+            </div>
+          </div>
+        </div>
+
+        <div class="main-img">
+          <img src="img/main/main.png" alt="Макет">
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
+
 </html>
