--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <div class="form__title">Мы бесплатно разработаем дизайн-проект Вашего жилья и реализуем его!</div>
         <div class="form__subtitle">Оставьте заявку на разработку бесплатного дизайн-проекта!</div>
         <input class="input form-input_name" type="text" placeholder="Ваше имя">
-        <input class="input form-input_tel" type="tel" pattern="+7-[0-9]{3}-[0-9]{2}-[0-9]{2}-[0-9]{3}" placeholder="Ваш номер">
+        <input class="input form-input_tel" type="tel" pattern="+7-[0-9]{3}-[0-9]{2}-[0-9]{2}-[0-9]{3}" maxlength="12" placeholder="Ваш телефон">
         <button class="button form-button">Получить бесплатный дизайн-проект</button>
         
         <div class="form-call">
