--- a/index.html
+++ b/index.html
@@ -58,28 +58,28 @@
     </div>
   </div>
 
-  <section class="feedback">
-    <div class="container">
-      <form class="form" action="#">
-        <div class="form__title">Мы бесплатно разработаем дизайн-проект Вашего жилья и реализуем его!</div>
-        <div class="form__subtitle">Оставьте заявку на разработку бесплатного дизайн-проекта!</div>
-        <input class="input form-input_name" type="text" placeholder="Ваше имя">
-        <input class="input form-input_tel" type="tel" pattern="+7-[0-9]{3}-[0-9]{2}-[0-9]{2}-[0-9]{3}" maxlength="12" placeholder="Ваш телефон">
-        <button class="button form-button">Получить бесплатный дизайн-проект</button>
-        
-        <div class="form-call">
-          <div class="form-call_text">Наш менеджер перезвонит Вам в течение 60 секунд</div>
-          <div class="form-call_phone">
-            <div class="form-call_phone-text">
-              или перезвоните нам сами
-              <a class="form-call_phone-number" href="tel:+74954225131">+7 (495) 42-251-31</a>
+    <section class="feedback">
+      <div class="container">
+        <form class="form" action="#">
+          <div class="form__title">Мы бесплатно разработаем дизайн-проект Вашего жилья и реализуем его!</div>
+          <div class="form__subtitle">Оставьте заявку на разработку бесплатного дизайн-проекта!</div>
+          <input class="input form-input_name" type="text" placeholder="Ваше имя">
+          <input class="input form-input_tel" type="tel" pattern="+7-[0-9]{3}-[0-9]{2}-[0-9]{2}-[0-9]{3}" maxlength="12"
+            placeholder="Ваш телефон">
+          <button class="button form-button">Получить бесплатный дизайн-проект</button>
+    
+          <div class="form-call">
+            <div class="form-call_text">Наш менеджер перезвонит Вам в течение 60 секунд</div>
+            <div class="form-call_phone">
+              <div class="form-call_phone-text">
+                или перезвоните нам сами
+                <a class="form-call_phone-number" href="tel:+74954225131">+7 (495) 42-251-31</a>
+              </div>
             </div>
           </div>
-        </div>
-      </form>
-    </div>
-  </section>
-
+        </form>
+      </div>
+    </section>
 </body>
 
 </html>
