--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="header-text__contacts_geo">Калуга, Москва, МО</div>
             <a class="header-text__contacts_tel" href="tel:+74954225131">+7 (495) 42-251-31</a>
           </div>
-          <button class="button">Перезвоните мне</button>
+          <button class="button">Перезвоните<span class="header-button_text-hide"> мне</span></button>
         </div>
       </div>
     </div>
@@ -61,7 +61,7 @@
     <section class="feedback">
       <div class="container">
         <form class="form" action="#">
-          <div class="form__title">Мы бесплатно разработаем дизайн-проект Вашего жилья и реализуем его!</div>
+          <div class="form__title">Мы бесплатно разработаем дизайн-проект <span class="form__title-low">В</span>ашего жилья и реализуем его!</div>
           <div class="form__subtitle">Оставьте заявку на разработку бесплатного дизайн-проекта!</div>
           <input class="input form-input_name" type="text" placeholder="Ваше имя">
           <input class="input form-input_tel" type="tel" pattern="+7-[0-9]{3}-[0-9]{2}-[0-9]{2}-[0-9]{3}" maxlength="12"
