--- a/index.html
+++ b/index.html
@@ -80,6 +80,71 @@
         </form>
       </div>
     </section>
+
+    <div class="modal">
+      <div class="modal__block">
+        <div class="modal__block-info">
+          <div class="modal__block-container">
+            <div class="modal__block-info_section">
+              <img class="modal__block-info_section-img" src="img/modals/1-modal/1.png" alt="Ванная команата">
+              <div class="modal__block-info_section-text">
+                <div class="modal__block-info_section-text_title">Ванная комната</div>
+                <div class="modal__block-info_section-text_prices">
+                  <li>135*150 - <span class="modal__block-info_section-text_prices-price">31 000 руб.</span></li>
+                  <li>170*170 - <span class="modal__block-info_section-text_prices-price">43 000 руб.</span></li>
+                </div>
+              </div>
+            </div>
+
+            <div class="modal__block-info_section">
+              <img class="modal__block-info_section-img" src="img/modals/1-modal/2.png" alt="Туалет">
+              <div class="modal__block-info_section-text">
+                <div class="modal__block-info_section-text_title">Туалет</div>
+                <div class="modal__block-info_section-text_prices">
+                  <li>135*70 - <span class="modal__block-info_section-text_prices-price">14 000 руб.</span></li>
+                </div>
+              </div>
+            </div>
+
+            <div class="modal__block-info_section">
+              <img class="modal__block-info_section-img" src="img/modals/1-modal/3.png" alt="Совмещенный санузел">
+              <div class="modal__block-info_section-text">
+                <div class="modal__block-info_section-text_title">Совмещенный санузел</div>
+                <div class="modal__block-info_section-text_prices">
+                  <li>170*210 - <span class="modal__block-info_section-text_prices-price">54 000 руб.</span></li>
+                </div>
+              </div>
+            </div>
+
+            <div class="modal__block-info_description">
+              <div class="modal__block-info_description-title">В стоимость работ входит</div>
+              <div class="modal__block-info_description-list">
+                <li>Демонтаж старого покрытия стен и пола</li>
+                <li>Выравнивание стен гипсовыми составами</li>
+                <li>Грунтовка стен и пола антисептиком, бетоноконтактом</li>
+                <li>Монтаж кафельной плитки на полу и стенах</li>
+                <li>Установка реечного или натяжного потолка, светильников</li>
+                <li>Монтаж двери с коробкой</li>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="modal__block-feedback">
+          <div class="modal__block-container">
+            <div class="modal__block-feedback_title">Узнайте точную стоимость ремонта по телефону!</div>
+            <div class="modal__block-feedback_subtitle">Заполните поля ниже - мы свяжемся с Вами</div>
+            <input type="text" placeholder="Ваше имя" class="modal__block-feedback_input input">
+            <input type="tel" placeholder="Ваш телефон" class="modal__block-feedback_input input">
+            <button class="modal__block-feedback_button button">Узнать стоимость</button>
+            <div class="modal__block-feedback_call-text">Или Вы можете перезвонить нам сами по телефону:</div>
+            <a href="tel:+78182425131" class="modal__block-feedback_call-tel">+7 (8182) 42-51-31</a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 </body>
 
 </html>
