добавил модальное окно

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="header-text__contacts_geo">Калуга, Москва, МО</div>
             <a class="header-text__contacts_tel" href="tel:+74954225131">+7 (495) 42-251-31</a>
           </div>
-          <button class="button">Перезвоните<span class="header-button_text-hide"> мне</span></button>
+          <button id="open_call" class="button">Перезвоните<span class="header-button_text-hide"> мне</span></button>
         </div>
       </div>
     </div>
@@ -131,6 +131,7 @@
         </div>
 
         <div class="modal__block-feedback">
+          <div class="modal__block-close">&#10060;</div>
           <div class="modal__block-container">
             <div class="modal__block-feedback_title">Узнайте точную стоимость ремонта по телефону!</div>
             <div class="modal__block-feedback_subtitle">Заполните поля ниже - мы свяжемся с Вами</div>
@@ -145,6 +146,7 @@
     </div>
 
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script src="js/script.js"></script>
 </body>
 
 </html>
