--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/owl.carousel.min.css">
+  <link rel="stylesheet" href="css/owl.theme.default.min.css">
   <link rel="stylesheet" href="css/style.css">
   <title>Ремонт квартир</title>
 </head>
@@ -145,7 +147,38 @@
       </div>
     </div>
 
+      <div class="portfolio">
+        <div class="container">
+
+          <div class="middle-title">Работая с 2007 года,<br>мы сделали более 500 ремонтов в квартирах и домах</div>
+
+          <div class="owl-carousel owl-theme owl-loaded owl-drag">
+              <div class="item">
+                <img src="img/portfolio/portfolio-img-1.jpg" alt="">
+              </div>
+              <div class="item">
+                <img src="img/portfolio/portfolio-img-2.jpg" alt="">
+              </div>
+              <div class="item">
+                <img src="img/portfolio/portfolio-img-3.jpg" alt="">
+              </div>
+              <div class="item">
+                <img src="img/portfolio/portfolio-img-1.jpg" alt="">
+              </div>
+              <div class="item">
+                <img src="img/portfolio/portfolio-img-2.jpg" alt="">
+              </div>
+              <div class="item">
+                <img src="img/portfolio/portfolio-img-3.jpg" alt="">
+              </div>
+          </div>
+          
+        </div>
+      </div>
+
+    </div>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script src="js/owl.carousel.min.js"></script>
     <script src="js/script.js"></script>
 </body>
 
