footer-feedaback ready

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <header class="header">
     <div class="container">
       <div class="header-container">
-        <img src="img/header-logo.jpg" alt="Лого">
+        <img src="img/header-logo.png" alt="Лого">
 
         <div class="header-text">
           <div class="header-text__contacts">
@@ -171,12 +171,39 @@
               <div class="item">
                 <img src="img/portfolio/portfolio-img-3.jpg" alt="">
               </div>
+          </div>      
+        </div>
+      </div> 
+
+      <div class="footer-feedback">
+        <div class="container">
+          <div class="footer-feedback__wrap">
+            <div class="footer-feedback__info">
+              <div class="footer-feedback__info-title">Мы можем озвучить Вам примерную стоимость работы и материалов по&nbsp;телефону</div>
+              <div class="footer-feedback__info-subtitle">Для этого нужно ответить на 4 вопроса:</div>
+              <div class="footer-feedback__info-list">
+                <li id="first">Какова площадь помещения?</li>
+                <li id="second">У Вас новостройка или вторичное жилье?</li>
+                <li id="third">Где находится помещение, в котором будет производиться&nbsp;ремонт?</li>
+                <li id="fourth">Назначение помещения?</li>
+              </div>
+            </div>
+            <div class="footer-feedback__block">
+              <form action="#" class="footer-feedback__block-form">
+                <div class="footer-feedback__block-form_title">Оставьте заявку на бесплатный расчет ремонта по телефону</div>
+                <div class="footer-feedback__block-form_subtitle">Для этого заполните форму ниже</div>
+                <div class="footer-feedback__block-form_inputs">
+                  <input type="text" placeholder="Ваше имя" class="input footer-feedback__block-form_input">
+                  <input type="tel" placeholder="Ваш телефон" class="input footer-feedback__block-form_input">
+                </div>
+                <button class="button footer-feedback__block-form_button">Рассчитать стоимость</button>
+                <div class="footer-feedback__block-form_description">Мы перезвоним Вам в течение 60 секунд</div>
+              </form>
+            </div>
           </div>
-          
         </div>
       </div>
 
-    </div>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="js/owl.carousel.min.js"></script>
     <script src="js/script.js"></script>
