--- a/index.html
+++ b/index.html
@@ -62,11 +62,11 @@
 
     <section class="feedback">
       <div class="container">
-        <form class="form" action="#">
+        <form  class="js-ajax form" action="#">
           <div class="form__title">Мы бесплатно разработаем дизайн-проект <span class="form__title-low">В</span>ашего жилья и реализуем его!</div>
           <div class="form__subtitle">Оставьте заявку на разработку бесплатного дизайн-проекта!</div>
-          <input class="input form-input_name" type="text" placeholder="Ваше имя">
-          <input class="input form-input_tel" type="tel" pattern="+7-[0-9]{3}-[0-9]{2}-[0-9]{2}-[0-9]{3}" maxlength="12"
+          <input required class="input form-input_name" name="fio" minlength="2" maxlength="30" type="text" placeholder="Ваше имя">
+          <input required class="input form-input_tel" name="phone" minlength="9" type="tel" pattern="+7-[0-9]{3}-[0-9]{2}-[0-9]{2}-[0-9]{3}" maxlength="12"
             placeholder="Ваш телефон">
           <button class="button form-button">Получить бесплатный дизайн-проект</button>
     
@@ -135,13 +135,15 @@
         <div class="modal__block-feedback">
           <div class="modal__block-close">&#10060;</div>
           <div class="modal__block-container">
-            <div class="modal__block-feedback_title">Узнайте точную стоимость ремонта по телефону!</div>
-            <div class="modal__block-feedback_subtitle">Заполните поля ниже - мы свяжемся с Вами</div>
-            <input type="text" placeholder="Ваше имя" class="modal__block-feedback_input input">
-            <input type="tel" placeholder="Ваш телефон" class="modal__block-feedback_input input">
-            <button class="modal__block-feedback_button button">Узнать стоимость</button>
-            <div class="modal__block-feedback_call-text">Или Вы можете перезвонить нам сами по телефону:</div>
-            <a href="tel:+78182425131" class="modal__block-feedback_call-tel">+7 (8182) 42-51-31</a>
+            <form class="test js-ajax" action="#">
+              <div class="modal__block-feedback_title">Узнайте точную стоимость ремонта по телефону!</div>
+              <div class="modal__block-feedback_subtitle">Заполните поля ниже - мы свяжемся с Вами</div>
+              <input type="text" placeholder="Ваше имя" name="fio" minlength="2" maxlength="30" class="modal__block-feedback_input input">
+              <input type="tel" placeholder="Ваш телефон" name="phone" minlength="9" maxlength="12" class="modal__block-feedback_input input">
+              <button class="modal__block-feedback_button button">Узнать стоимость</button>
+              <div class="modal__block-feedback_call-text">Или Вы можете перезвонить нам сами по телефону:</div>
+              <a href="tel:+78182425131" class="modal__block-feedback_call-tel">+7 (8182) 42-51-31</a>
+            </form>
           </div>
         </div>
       </div>
@@ -189,12 +191,12 @@
               </div>
             </div>
             <div class="footer-feedback__block">
-              <form action="#" class="footer-feedback__block-form">
+              <form action="#"  class="js-ajax footer-feedback__block-form">
                 <div class="footer-feedback__block-form_title">Оставьте заявку на бесплатный расчет ремонта по телефону</div>
                 <div class="footer-feedback__block-form_subtitle">Для этого заполните форму ниже</div>
                 <div class="footer-feedback__block-form_inputs">
-                  <input type="text" placeholder="Ваше имя" class="input footer-feedback__block-form_input">
-                  <input type="tel" placeholder="Ваш телефон" class="input footer-feedback__block-form_input">
+                  <input required type="text" name="fio" minlength="2" maxlength="30" placeholder="Ваше имя" class="input footer-feedback__block-form_input">
+                  <input required type="tel" name="phone" minlength="9" maxlength="12" placeholder="Ваш телефон" class="input footer-feedback__block-form_input">
                 </div>
                 <button class="button footer-feedback__block-form_button">Рассчитать стоимость</button>
                 <div class="footer-feedback__block-form_description">Мы перезвоним Вам в течение 60 секунд</div>
@@ -204,7 +206,15 @@
         </div>
       </div>
 
+      <div class="modal-succes">
+        <div class="modal-succes__block">
+          <div class="modal__block-close">&#10060;</div>
+          <div class="modal-succes__block-title">Спасибо большое.</div>
+          <div class="modal-succes__block-text">Ожидайте звонка.</div>
+        </div>
+      </div>
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.0/dist/jquery.validate.min.js"></script>
     <script src="js/owl.carousel.min.js"></script>
     <script src="js/script.js"></script>
 </body>
