--- a/index.html
+++ b/index.html
@@ -65,9 +65,15 @@
         <form  class="js-ajax form" action="#">
           <div class="form__title">Мы бесплатно разработаем дизайн-проект <span class="form__title-low">В</span>ашего жилья и реализуем его!</div>
           <div class="form__subtitle">Оставьте заявку на разработку бесплатного дизайн-проекта!</div>
-          <input required class="input form-input_name" name="fio" minlength="2" maxlength="30" type="text" placeholder="Ваше имя">
-          <input required class="input form-input_tel" name="phone" minlength="9" type="tel" pattern="+7-[0-9]{3}-[0-9]{2}-[0-9]{2}-[0-9]{3}" maxlength="12"
-            placeholder="Ваш телефон">
+          <div class="test">
+            <div class="form__inputs">
+              <input required class="input form-input_name" name="fio" minlength="2" maxlength="30" type="text" placeholder="Ваше имя">
+            </div>
+            <div class="form__inputs">
+              <input required class="input form-input_tel" name="phone" minlength="9" type="tel" pattern="+7-[0-9]{3}-[0-9]{2}-[0-9]{2}-[0-9]{3}" maxlength="12"
+              placeholder="Ваш телефон">
+            </div>
+          </div>
           <button class="button form-button">Получить бесплатный дизайн-проект</button>
     
           <div class="form-call">
@@ -138,8 +144,10 @@
             <form class="test js-ajax" action="#">
               <div class="modal__block-feedback_title">Узнайте точную стоимость ремонта по телефону!</div>
               <div class="modal__block-feedback_subtitle">Заполните поля ниже - мы свяжемся с Вами</div>
-              <input type="text" placeholder="Ваше имя" name="fio" minlength="2" maxlength="30" class="modal__block-feedback_input input">
-              <input type="tel" placeholder="Ваш телефон" name="phone" minlength="9" maxlength="12" class="modal__block-feedback_input input">
+              <div class="modal__block-feedback_inputs">
+                <input type="text" placeholder="Ваше имя" name="fio" minlength="2" maxlength="30" class="modal__block-feedback_input input">
+                <input type="tel" placeholder="Ваш телефон" name="phone" minlength="9" maxlength="12" class="modal__block-feedback_input input">
+              </div>
               <button class="modal__block-feedback_button button">Узнать стоимость</button>
               <div class="modal__block-feedback_call-text">Или Вы можете перезвонить нам сами по телефону:</div>
               <a href="tel:+78182425131" class="modal__block-feedback_call-tel">+7 (8182) 42-51-31</a>
@@ -213,6 +221,7 @@
           <div class="modal-succes__block-text">Ожидайте звонка.</div>
         </div>
       </div>
+      
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.0/dist/jquery.validate.min.js"></script>
     <script src="js/owl.carousel.min.js"></script>
