--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <form  class="js-ajax form" action="#">
           <div class="form__title">Мы бесплатно разработаем дизайн-проект <span class="form__title-low">В</span>ашего жилья и реализуем его!</div>
           <div class="form__subtitle">Оставьте заявку на разработку бесплатного дизайн-проекта!</div>
-          <div class="test">
+          <div class="form__inputs-wrap">
             <div class="form__inputs">
               <input required class="input form-input_name" name="fio" minlength="2" maxlength="30" type="text" placeholder="Ваше имя">
             </div>
