--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
           <a href="#" class="price-block__price">Узнать цены</a>
         </div>
         <div class="price-block wow fadeInUp" data-wow-delay="0.4s">
-          <div class="price-block__img"><img src="img/price/price-img-2.png" alt="Ремонт комнат и квартир"></div>
+          <div class="price-block__img"><img src="img/price/price-img-2.png" alt="Ремонт к  омнат и квартир"></div>
           <div class="price-block__title">Ремонт комнат и квартир</div>
           <a href="#" class="price-block__price">Узнать цены</a>
         </div>
@@ -253,6 +253,18 @@
     </div>
   </div>
 
+  <div class="footer">
+    <div class="footer-map wow fadeInLeft" id="map"></div>
+      <div class="footer-wrap">
+        <div class="footer-block">
+        <div class="footer__title wow fadeInRight">Приезжайте к нам в гости!</div>
+        <div class="footer__subtitle wow fadeInRight">Проконсультируем Вас <br>по всем вопросам ремонта</div>
+        <div class="footer__info footer__info-geo wow fadeInRight" data-wow-delay="0.2s">г. Москва <a class="footer__info_bold" href="https://yandex.ru/maps/22/kaliningrad/?ll=20.504134%2C54.719614&mode=search&oid=208031730693&ol=biz&sctx=ZAAAAAgBEAAaKAoSCSkIHt%2FegTRAETvCacGLWktAEhIJlXQMAMD%2B0z8RP2epufeQuj8iBAABAgQoCjAAOPKo6oScxp3ckAFAFkgAVc3MzD5YAGoCcnVwAJ0BzczMPaABAKgBAA%3D%3D&sll=20.504134%2C54.719614&sspn=0.007399%2C0.002457&text=г.%20Москва%20ул.%20Ленинга%2C%20д.%2010%2C%20корпус%202%2C%20оф.%20308&z=17.4">ул. Ленинга, д.10, корпус 2, оф. 308</a></div>
+        <div class="footer__info footer__info-clock wow fadeInRight" data-wow-delay="0.2s">Режим работы: <div class="footer-info_bold">с 9:00 до 18:00</div></div>
+        <div class="footer__info footer__info-phone wow fadeInRight" data-wow-delay="0.2s">Телефон: <a class="footer__info_bold" href="tel:+74954225131">+ 7 (495) 42-251-31</a></div>
+      </div>
+    </div>
+  </div>
 
     <!-- Модальные окна -->
     <div class="modal-succes">
@@ -337,6 +349,7 @@
   <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.0/dist/jquery.validate.min.js"></script>
   <script src="js/owl.carousel.min.js"></script>
   <script src="js/wow.min.js"></script>
+  <script src="https://api-maps.yandex.ru/2.1/?apikey=f2150992-32f0-4de2-bfa1-879668d69335&lang=ru_RU" type="text/javascript"></script>
   <script src="js/script.js"></script>
 </body>
 
