--- a/index.html
+++ b/index.html
@@ -9,11 +9,6 @@
   <link rel="stylesheet" href="css/owl.theme.default.min.css">
   <link rel="stylesheet" href="css/animate.css">
   <link rel="stylesheet" href="css/style.css">
-  <!-- Yandex.Metrika counter --> 
-  <script type="text/javascript" > (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)}; m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)}) (window, document, "script", "https://cdn.jsdelivr.net/npm/yandex-metrica-watch/tag.js", "ym") ym(51447743, "init", { id:51447743, clickmap:true, trackLinks:true, accurateTrackBounce:true, webvisor:true, trackHash:true });</script>
-  <noscript>
-    <div><img src="https://mc.yandex.ru/watch/51447743" style="position:absolute; left:-9999px;" alt="" /></div>
-  </noscript>
   <title>Ремонт квартир</title>
 </head>
 
@@ -354,6 +349,7 @@
   <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.0/dist/jquery.validate.min.js"></script>
   <script src="js/owl.carousel.min.js"></script>
   <script src="js/wow.min.js"></script>
+  <!-- Yandex.Metrika counter --> <script type="text/javascript" > (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)}; m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)}) (window, document, "script", "https://cdn.jsdelivr.net/npm/yandex-metrica-watch/tag.js", "ym") ym(51447743, "init", { id:51447743, clickmap:true, trackLinks:true, accurateTrackBounce:true, webvisor:true, trackHash:true }); </script> <noscript><div><img src="https://mc.yandex.ru/watch/51447743" style="position:absolute; left:-9999px;" alt="" /></div></noscript> <!-- /Yandex.Metrika counter -->
   <script src="https://api-maps.yandex.ru/2.1/?apikey=f2150992-32f0-4de2-bfa1-879668d69335&lang=ru_RU" type="text/javascript"></script>
   <script src="js/script.js"></script>
 </body>
