--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
       <div class="modal__block-feedback">
         <div class="modal__block-close">&#10006;</div>
         <div class="modal__block-container">
-          <form class="test js-ajax" action="#">
+          <form class="test js-ajax" action="" method="get" onsubmit="yaCounter51447743.reachGoal('sub'); return true;">
             <div class="modal__block-feedback_title">Узнайте точную стоимость ремонта по телефону!</div>
             <div class="modal__block-feedback_subtitle">Заполните поля ниже - мы свяжемся с Вами</div>
             <div class="modal__block-feedback_inputs">
