--- a/index.html
+++ b/index.html
@@ -235,9 +235,60 @@
     </div>
   </div>
 
-  <div class="advantages">
+  <div class="advantages wow fadeInUp" data-wow-delay="0.3s">
     <div class="container">
       <div class="advantages-text">Ремонт обойдется Вам дешевле, так как<br> мы используем качественные материалы по&nbsp;оптовым ценам</div>
+    </div>
+  </div>
+
+  <div class="services">
+    <div class="container">
+      <div class="services-wrap">
+        <div class="services-block wow fadeInLeft" data-wow-delay="0.2s">
+          <div class="services-block_text wow fadeIn" data-wow-delay="0.45s">Поможем закупить все материалы по&nbsp;оптовым ценам у проверенных поставщиков</div>
+          <img src="/img/services/services-img-1.png" alt="Поможем" class="services-block_img">
+        </div>
+
+        <div class="services-block wow fadeInDown" data-wow-delay="0.2s">
+          <div class="services-block_text wow fadeIn" data-wow-delay="0.45s">Мы дадим Вам <span class="services-block_text-bold">максимальные скидки</span> у наших партнеров для закупки материалов оптом</div>
+          <img src="/img/services/services-img-2.png" alt="Дадим" class="services-block_img">
+        </div>
+
+        <div class="services-block wow fadeInRight" data-wow-delay="0.2s">
+          <div class="services-block_text wow fadeIn" data-wow-delay="0.45s">Все, что не сможете найти в городе - поможем заказать <span class="services-block_text-bold">у проверенных поставщиков</span></div>
+          <img src="/img/services/services-img-3.png" alt="Проверим" class="services-block_img">
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="guarantees">
+    <div class="container">
+      <div class="middle-title wow fadeIn" data-wow-delay="0.2s">Все наши гарантийные обязательства<br>подробно и прозрачно описаны в договоре</div>
+      <div class="guarantees-wrap">
+
+        <div class="guarantees-block wow fadeInLeft" data-wow-delay="0.2s">
+          <div class="guarantees-block_img">
+            <img src="img/guarantees/guarantees-img-1.png" alt="Качество">
+          </div>
+          <div class="guarantees-block_text">Гарантия на качество выполняемых&nbsp;работ</div>
+        </div>
+
+        <div class="guarantees-block wow fadeInUp" data-wow-delay="0.2s">
+          <div class="guarantees-block_img">
+            <img src="img/guarantees/guarantees-img-2.png" alt="Цены">
+          </div>
+          <div class="guarantees-block_text">Гарантия на фиксированные&nbsp;цены Виды работ и цены на них прописаны в договоре</div>
+        </div>
+
+        <div class="guarantees-block wow fadeInRight" data-wow-delay="0.2s">
+          <div class="guarantees-block_img">
+            <img src="img/guarantees/guarantees-img-3.png" alt="Сроки">
+          </div>
+          <div class="guarantees-block_text">Гарантия на точное соблюдение сроков и ответственность за их&nbsp;невыполнение</div>
+        </div>
+
+      </div>
     </div>
   </div>
 
