--- a/index.html
+++ b/index.html
@@ -7,10 +7,14 @@
   <link rel="shortcut icon" href="img/logo.png" type="image/png">
   <link rel="stylesheet" href="css/owl.carousel.min.css">
   <link rel="stylesheet" href="css/owl.theme.default.min.css">
-  <!-- <link rel="stylesheet" href="css/animate.css"> -->
+  <link rel="stylesheet" href="css/animate.css">
   <link rel="stylesheet" href="css/style.css">
-  <!-- Yandex.Metrika counter -->
-<script type="text/javascript" >
+  <title>Ремонт квартир</title>
+</head>
+
+<body> 
+<!-- Yandex.Metrika counter -->
+<script>
   (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
   m[i].l=1*new Date();k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
   (window, document, "script", "https://cdn.jsdelivr.net/npm/yandex-metrica-watch/tag.js", "ym")
@@ -26,10 +30,7 @@
 </script>
 <noscript><div><img src="https://mc.yandex.ru/watch/51447743" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
 <!-- /Yandex.Metrika counter -->
-  <title>Ремонт квартир</title>
-</head>
 
-<body>
   <header class="header wow slideInDown">
     <div class="container">
       <div class="header-container">
@@ -79,7 +80,7 @@
     </div>
   </div>
 
-  <section class="feedback wow fadeInRight" >
+  <section class="feedback wow fadeInRight">
     <div class="container">
       <form  class="js-ajax form wow fadeInLeft" data-wow-delay="0.5s" action="#">
         <div class="form__title">Мы бесплатно разработаем дизайн-проект <span class="form__title-low">В</span>ашего жилья и реализуем его!</div>
@@ -315,12 +316,12 @@
         <div class="footer-feedback__info wow fadeInLeft" data-wow-delay="0.4s">
           <div class="footer-feedback__info-title">Мы можем озвучить Вам примерную стоимость работы и материалов по&nbsp;телефону</div>
           <div class="footer-feedback__info-subtitle">Для этого нужно ответить на 4 вопроса:</div>
-          <div class="footer-feedback__info-list">
+          <ul class="footer-feedback__info-list">
             <li id="first">Какова площадь помещения?</li>
             <li id="second">У Вас новостройка или вторичное жилье?</li>
             <li id="third">Где находится помещение, в котором будет производиться&nbsp;ремонт?</li>
             <li id="fourth">Назначение помещения?</li>
-          </div>
+          </ul>
         </div>
         <div class="footer-feedback__block wow fadeInRight" data-wow-delay="0.4s">
           <form action="#"  class="js-ajax footer-feedback__block-form">
@@ -369,10 +370,10 @@
             <img class="modal__block-info_section-img" src="img/modals/1-modal/1.png" alt="Ванная команата">
             <div class="modal__block-info_section-text">
               <div class="modal__block-info_section-text_title">Ванная комната</div>
-              <div class="modal__block-info_section-text_prices">
+              <ul class="modal__block-info_section-text_prices">
                 <li>135*150 - <span class="modal__block-info_section-text_prices-price">31 000 руб.</span></li>
                 <li>170*170 - <span class="modal__block-info_section-text_prices-price">43 000 руб.</span></li>
-              </div>
+              </ul>
             </div>
           </div>
 
@@ -380,9 +381,9 @@
             <img class="modal__block-info_section-img" src="img/modals/1-modal/2.png" alt="Туалет">
             <div class="modal__block-info_section-text">
               <div class="modal__block-info_section-text_title">Туалет</div>
-              <div class="modal__block-info_section-text_prices">
+              <ul class="modal__block-info_section-text_prices">
                 <li>135*70 - <span class="modal__block-info_section-text_prices-price">14 000 руб.</span></li>
-              </div>
+              </ul>
             </div>
           </div>
 
@@ -390,22 +391,22 @@
             <img class="modal__block-info_section-img" src="img/modals/1-modal/3.png" alt="Совмещенный санузел">
             <div class="modal__block-info_section-text">
               <div class="modal__block-info_section-text_title">Совмещенный санузел</div>
-              <div class="modal__block-info_section-text_prices">
+              <ul class="modal__block-info_section-text_prices">
                 <li>170*210 - <span class="modal__block-info_section-text_prices-price">54 000 руб.</span></li>
-              </div>
+              </ul>
             </div>
           </div>
 
           <div class="modal__block-info_description">
             <div class="modal__block-info_description-title">В стоимость работ входит</div>
-            <div class="modal__block-info_description-list">
+            <ul class="modal__block-info_description-list">
               <li>Демонтаж старого покрытия стен и пола</li>
               <li>Выравнивание стен гипсовыми составами</li>
               <li>Грунтовка стен и пола антисептиком, бетоноконтактом</li>
               <li>Монтаж кафельной плитки на полу и стенах</li>
               <li>Установка реечного или натяжного потолка, светильников</li>
               <li>Монтаж двери с коробкой</li>
-            </div>
+            </ul>
           </div>
         </div>
       </div>
@@ -413,7 +414,7 @@
       <div class="modal__block-feedback">
         <div class="modal__block-close">&#10006;</div>
         <div class="modal__block-container">
-          <form class="test js-ajax" action="" method="get" onsubmit="yaCounter51447743.reachGoal('sub'); return true;">
+          <form class="test js-ajax" action="#" method="get" onsubmit="yaCounter51447743.reachGoal('sub'); return true;">
             <div class="modal__block-feedback_title">Узнайте точную стоимость ремонта по телефону!</div>
             <div class="modal__block-feedback_subtitle">Заполните поля ниже - мы свяжемся с Вами</div>
             <div class="modal__block-feedback_inputs">
@@ -434,7 +435,7 @@
   <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.0/dist/jquery.validate.min.js"></script>
   <script src="js/owl.carousel.min.js"></script>
   <script src="js/wow.min.js"></script>
-  <script src="https://api-maps.yandex.ru/2.1/?apikey=f2150992-32f0-4de2-bfa1-879668d69335&lang=ru_RU" type="text/javascript"></script>
+  <script src="https://api-maps.yandex.ru/2.1/?apikey=f2150992-32f0-4de2-bfa1-879668d69335&lang=ru_RU"></script>
   <script src="js/script.js"></script>
 </body>
 
