--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     </div>
   </div>
 
-  <section class="feedback wow fadeInRight">
+  <div class="feedback wow fadeInRight">
     <div class="container">
       <form  class="js-ajax form wow fadeInLeft" data-wow-delay="0.5s" action="#">
         <div class="form__title">Мы бесплатно разработаем дизайн-проект <span class="form__title-low">В</span>ашего жилья и реализуем его!</div>
@@ -91,7 +91,7 @@
             <input required class="input form-input_name" name="fio" minlength="2" maxlength="30" type="text" placeholder="Ваше имя">
           </div>
           <div class="form__inputs">
-            <input required class="input form-input_tel" name="phone" minlength="9" type="tel" pattern="+7-[0-9]{3}-[0-9]{2}-[0-9]{2}-[0-9]{3}" maxlength="12"
+            <input required class="input form-input_tel" name="phone" id="phone" minlength="9" type="tel" pattern="+7-[0-9]{3}-[0-9]{2}-[0-9]{2}-[0-9]{3}" maxlength="12"
             placeholder="Ваш телефон">
           </div>
         </div>
@@ -108,7 +108,7 @@
         </div>
       </form>
     </div>
-  </section>
+  </div>
 
   <div class="portfolio wow fadeIn" data-wow-delay="0.5s">
     <div class="container">
@@ -433,6 +433,7 @@
 
   <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.0/dist/jquery.validate.min.js"></script>
+  <script src="js/jquery.maskedinput.min.js"></script>
   <script src="js/owl.carousel.min.js"></script>
   <script src="js/wow.min.js"></script>
   <script src="https://api-maps.yandex.ru/2.1/?apikey=f2150992-32f0-4de2-bfa1-879668d69335&lang=ru_RU"></script>
