--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     </div>
   </div>
 
-  <div class="feedback wow fadeInRight">
+  <div id="lesson-16" class="feedback wow fadeInRight">
     <div class="container">
       <form  class="js-ajax form wow fadeInLeft" data-wow-delay="0.5s" action="#">
         <div class="form__title">Мы бесплатно разработаем дизайн-проект <span class="form__title-low">В</span>ашего жилья и реализуем его!</div>
@@ -110,7 +110,7 @@
     </div>
   </div>
 
-  <div class="portfolio wow fadeIn" data-wow-delay="0.5s">
+  <div id="lesson-20" class="portfolio wow fadeIn" data-wow-delay="0.5s">
     <div class="container">
 
       <div class="middle-title">Работая с 2007 года,<br>мы сделали более 500 ремонтов в квартирах и домах</div>
@@ -310,7 +310,7 @@
     </div>
   </div>
 
-  <div class="footer-feedback wow fadeIn" data-wow-delay="0.2s">
+  <div id="lesson-21" class="footer-feedback wow fadeIn" data-wow-delay="0.2s">
     <div class="container">
       <div class="footer-feedback__wrap">
         <div class="footer-feedback__info wow fadeInLeft" data-wow-delay="0.4s">
